--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/slider": "^4.5.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.39.0",
     "expo": "^53.0.0",
     "expo-apple-authentication": "^7.2.4",
     "expo-av": "^15.1.7",
